[package]
name = "audiotube-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib"]

[dependencies]
diesel = { version = "1.4", features = ["sqlite"] }
diesel_migrations = "1.4"
cxx = "*"

[build-dependencies]
cxx-build = "1.0"
